--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-ipos.ltd
+<!DOCTYPE html>
+<html lang="zh-CN">
+  <head>
+    <script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+  </head>
+  <body>
+    <h1 class="text-center">你好，ipos！</h1>
+  </body>
+</html>
