--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <h1 class="text-center">你好，ipos！</h1>
+    <div class="jumbotron">
+  <h1>hello, iPos!</h1>
+  <p>依托于云技术，趋移动互联之大势，彻底颠覆和重新定义POS机，为商户提供智能化的O2O解决方案，核心产品为高度集成、软硬一体的互联网POS机来客iPOS.除了满足商户日常管理所需，我们还完成了与支付宝和微信的无缝地接，完成了与国内主流外卖引流平台的无缝对接，以最简易智能的方式，一站式为商户提供管理和营销的最优方案。</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">更多</a></p>
+</div>
   </body>
 </html>
