--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="jumbotron">
-  <h1>hello, iPos!</h1>
+  <h1>Hello, iPos!</h1>
   <p>依托于云技术，趋移动互联之大势，彻底颠覆和重新定义POS机，为商户提供智能化的O2O解决方案，核心产品为高度集成、软硬一体的互联网POS机来客iPOS。</p>
   <p><a class="btn btn-primary btn-lg" href="#" role="button">更多</a></p>
 </div>
