--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <div class="jumbotron">
+  <div class="jumbotron">
   <h1>Hello, iPos!</h1>
   <p>依托于云技术，趋移动互联之大势，彻底颠覆和重新定义POS机，为商户提供智能化的O2O解决方案，核心产品为高度集成、软硬一体的互联网POS机来客iPOS。</p>
   <p><a class="btn btn-primary btn-lg" href="#" role="button">更多</a></p>
-</div>
+  </div>
+  <embed src='http://player.youku.com/player.php/sid/XNjc0MDQxNzQ4/v.swf' allowFullScreen='true' quality='high' width='480' height='400' align='middle' allowScriptAccess='always' type='application/x-shockwave-flash'></embed>
   </body>
 </html>
